# v440

./: .gitignore  MANIFEST.in  Makefile  README.rst  jacobus.txt  pyproject.toml  run_tests.py
docs/: 404.html  CNAME  briefing.html  features.html  impressum.html  index.html  index1.html  install.html  intro.html  license.html  styles.css  testing.html  v1.0.rst  v2.0.rst
docs/documentation/: index.html
make/: env.py  jacobus.txt  jacobus_empty.txt  jacobus_in.txt  jacobus_sort.txt  manifest.txt  text_sort.py  toml_get.txt  toml_sorted_pyproject.txt  toml_sorted_testdata.txt
src/v440/: __init__.py
src/v440/_core/: Local.py  Parser.py  Pattern.py  Pre.py  QualifierParser.py  Release.py  Version.py  utils.py
src/v440/_utils/: Base.py  BaseList.py  BaseStringer.py  Cfg.py  Clue.py  Eden.py  ListStringer.py  Pattern.py  QualSpec.py  QualStringer.py  QualifierParser.py  SlotList.py  SlotStringer.py  VList.py  __init__.py  cfg.toml  forms.py  guarding.py  patterns.py  qualparse.py  utils.py
src/v440/_utils/releaseparse/: deleting.py  getting.py  ranging.py  setting.py
src/v440/abc/: CoreABC.py  ListABC.py  NestedABC.py  NonListABC.py  QualABC.py  __init__.py
src/v440/core/: Base.py  Dev.py  Local.py  Post.py  Pre.py  Public.py  Qual.py  Qualification.py  Release.py  Version.py  VersionError.py  __init__.py  segmenting.py
src/v440/errors/: VersionError.py  __init__.py
src/v440/tests/: __init__.py  test_dev_int.py  test_dev_nonint.py  test_examples.py  test_testdata.py  test_version.py  testdata.toml
tests/: test_testdata.py  test_version.py  testdata.toml
