[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "datahold>=2.0,<3",
    "datarepr>=1.0.2,<2",
    "iterprod>=1.0,<2.0",
    "keyalias>=1.0.3,<2.0",
    "packaging>=23.2",
    "setdoc>=1.2.6,<2",
    "setsig>=1.0,<2",
    "unhash>=1.0.1,<2",
]
description = "This project provides mutable version objects in accordance with PEP440."
keywords = []
name = "v440"
readme = "README.rst"
requires-python = ">=3.11"
version = "2.0.0+local.39.packaging"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/v440/#files"
Index = "https://pypi.org/project/v440/"
Source = "https://github.com/johannes-programming/v440/"
Website = "http://v440.johannes-programming.online/"
