[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "cmp3>=1.0,<2",
    "copyable>=1.1,<2",
    "datahold>=3.0,<4",
    "datarepr>=1.2,<2",
    "iterflat>=1.1,<2",
    "iterprod>=1.1,<2",
    "packaging>=25.0,<26",
    "setdoc>=1.2.20,<2",
]
description = "This project provides mutable version objects in accordance with PEP440."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "v440"
readme = "README.rst"
requires-python = ">=3.11"
version = "2.0.7+tested.4"

[project.urls]
Download = "https://pypi.org/project/v440/#files"
Index = "https://pypi.org/project/v440/"
Source = "https://github.com/johannes-programming/v440/"
Website = "http://v440.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false

[[tool.mypy.overrides]]
module = [
    "cmp3",
    "cmp3.*",
]
ignore_missing_imports = true
